<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayAdd"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.supervisor.AddUserFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout4"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            app:menu="@menu/menu_supervisor"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:title="@string/aforo_name" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardVNuevoFunc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="12dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nuevoFunc"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTApell"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/last_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editTNom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editTextNumberDni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/dni"
                android:inputType="number" />

            <EditText
                android:id="@+id/editTextTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/cel_phone"
                android:inputType="phone" />

            <EditText
                android:id="@+id/editTextTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/edt_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/editTextAlias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/nombreUsuario"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/NumPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Password"
                android:inputType="numberPassword" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ImageButton
        android:id="@+id/imgBtnSave"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:background="@drawable/btn_circle"
        android:contentDescription="@string/contentDescBtn"
        android:src="@android:drawable/ic_media_play"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardVNuevoFunc" />
</androidx.constraintlayout.widget.ConstraintLayout>