<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"

    android:id="@+id/rootLayoutSupervisor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgray"
    android:fontFamily="@font/roboto"
    tools:context=".ui.home.supervisor.HomeFragmentSupervisor">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            app:menu="@menu/menu_supervisor"
            app:navigationIcon="@mipmap/logotrbmp"
            app:title="@string/aforo_name" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_width="400dp"
        android:layout_height="175dp"
        android:layout_gravity="center"
        android:layout_marginTop="75dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardBackgroundColor="@color/celeste"
        app:cardCornerRadius="20dp">

        <TextView
            android:id="@+id/datos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/datos"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/titulo"
            android:layout_width="156dp"
            android:layout_height="31dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:text="@string/nombreSucursal"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/domicilio"
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="50dp"
            android:text="@string/domicilio"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/funcionario"
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="70dp"
            android:text="@string/funcionarioAsignado"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/ancho"
            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="90dp"
            android:text="@string/mt2ancho"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/alto"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="110dp"
            android:text="@string/mt2alto"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/capmax"
            android:layout_width="117dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="130dp"
            android:text="@string/capacidadMaxima"
            android:textColor="@color/colorPrimaryDark" />

        <ImageView
            android:id="@+id/fotoFuncionario"
            android:layout_width="75dp"
            android:layout_height="61dp"
            android:layout_marginLeft="320dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/fotofunc" />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card2"
        android:layout_width="400dp"
        android:layout_height="230dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card1">

        <TextView
            android:id="@+id/titleTorta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/capacidadActual"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/torta"
            android:layout_width="151dp"
            android:layout_height="130dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="125dp"
            android:src="@drawable/torta" />

        <TextView
            android:id="@+id/ocupTorta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="175dp"
            android:text="@string/ocupTorta"
            android:textAlignment="center"
            android:textColor="@color/fucsia"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dispoTorta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:text="@string/dispoTorta"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card3"
        android:layout_width="403dp"
        android:layout_height="109dp"
        android:layout_gravity="center"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card2">

        <ImageView
            android:id="@+id/lights"
            android:layout_width="88dp"
            android:layout_height="85dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/lights" />

        <TextView
            android:id="@+id/verde"
            android:layout_width="179dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="175dp"
            android:layout_marginTop="20dp"
            android:text="@string/verde"
            android:textAlignment="center"
            android:textColor="@color/verde"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/amarillo"
            android:layout_width="179dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="175dp"
            android:layout_marginTop="45dp"
            android:text="@string/amarillo"
            android:textAlignment="center"
            android:textColor="@color/amarillo"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/rojo"
            android:layout_width="179dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="175dp"
            android:layout_marginTop="65dp"
            android:text="@string/verde"
            android:textAlignment="center"
            android:textColor="@color/rojo"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card4"
        android:layout_width="403dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card3">

        <TextView
            android:id="@+id/horas"
            android:layout_width="140dp"
            android:layout_height="80dp"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="10dp"
            android:text="@string/mayor"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textSize="20dp"/>

        <ImageView
            android:id="@+id/barras"
            android:layout_width="211dp"
            android:layout_height="85dp"
            android:layout_marginLeft="170dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/barra" />

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>