<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayoutSucursalesSupervisor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgray"
    android:screenOrientation="portrait"
    tools:context=".ui.home.funcionario.NotificacionesFuncionarioFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            app:menu="@menu/menu_funcionario"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:title="@string/aforo_name" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.cardview.widget.CardView
        android:id="@+id/notificaciones"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@+id/semaforos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout2">

        <TextView
            android:id="@+id/notif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto"
            android:text="@string/menunoti"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/notilimit"
            android:layout_width="199dp"
            android:layout_height="28dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/roboto"
            android:text="@string/notilimit"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="70dp" />

        <TextView
            android:id="@+id/notimax"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="130dp"
            android:fontFamily="@font/roboto"
            android:text="@string/notimax"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp" />

        <Switch
            android:id="@+id/switch2"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="130dp" />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/semaforos"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSiguiente"
        app:layout_constraintTop_toBottomOf="@+id/notificaciones"
        app:layout_constraintVertical_bias="0.181"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="11dp">

        <TextView
            android:id="@+id/semaf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto"
            android:text="@string/semaforos"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/hasta1"
            android:layout_width="50dp"
            android:layout_height="28dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/roboto"
            android:text="@string/hasta"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtVerde"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="80dp"
            android:hint="@string/p60"
            android:layout_weight="1"
            android:inputType="number"
            android:textAlignment="textStart"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/configgreen"
            android:layout_width="100dp"
            android:layout_height="28dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/roboto"
            android:text="@string/configgreen"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/hasta2"
            android:layout_width="50dp"
            android:layout_height="28dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/roboto"
            android:text="@string/hasta"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtAmarillo"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:layout_marginLeft="80dp"
            android:hint="@string/p80"
            android:layout_weight="1"
            android:inputType="number"
            android:textAlignment="textStart"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/configyell"
            android:layout_width="100dp"
            android:layout_height="28dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/roboto"
            android:text="@string/configyell"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/hasta3"
            android:layout_width="50dp"
            android:layout_height="28dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="130dp"
            android:fontFamily="@font/roboto"
            android:text="@string/hasta"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtRojo"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:layout_marginLeft="80dp"
            android:hint="@string/p100"
            android:layout_weight="1"
            android:inputType="number"
            android:textAlignment="textStart"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/configred"
            android:layout_width="100dp"
            android:layout_height="28dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="130dp"
            android:fontFamily="@font/roboto"
            android:text="@string/configred"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp" />

    </androidx.cardview.widget.CardView>

    <ImageButton
        android:id="@+id/btnSiguiente"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="128dp"
        android:background="@drawable/btn_circle"
        android:elevation="30dp"
        android:src="@drawable/ic_save"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/semaforos" />


</androidx.constraintlayout.widget.ConstraintLayout>