<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayoutFuncionarios"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgray"
    tools:context=".ui.home.supervisor.HomeFragmentSupervisor">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            app:menu="@menu/menu_supervisor"
            app:navigationIcon="@mipmap/logotrbmp"
            app:title="@string/aforo_name" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_width="400dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="65dp"
        app:cardBackgroundColor="@color/darkblue"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/datos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/orga"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/organizacion"
            android:layout_width="295dp"
            android:layout_height="31dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:text="@string/organizacion"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/supervisor"
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="60dp"
            android:text="@string/supervisor"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/apenombre"
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="85dp"
            android:text="@string/apeNom"
            android:textColor="@color/white" />

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewSucursales"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card1"
        tools:layout_editor_absoluteX="6dp" />

</androidx.constraintlayout.widget.ConstraintLayout>